 * added an option to hide the shuffle and repeat buttons
 * added optional playlist columns for track number, genre, album, description,
   date and language.

Removed modules:
 * portaudio audio output
 * X11 On Screen Display notifications (xosd)
 * Linux Framebuffer On Screen Display interface (fbosd)
 * RTMP access: use libavformat avio instead


Changes between 2.0.1 and 2.0.2:
--------------------------------

Video Output:
 * XP machine will now use DirectX mode by default, like in previous versions.
   There were too many errors with broken drivers.
 * More accurate colourspaces conversions for YUV->RGB in OpenGL
 * Add menu support for libvlc / VLCKit applications on Mac OS X
 * Various fixes on Mac OS X, notably for crop, zoom, osd and menu support
 * Misc fixes in OpenGL module, on all platforms
 * Fix video output on PowerPC-based Macs equipped with an ATI Radeon 7500,
   an ATI Radeon 9200 or a NVIDIA GeForceFX 5200 Ultra.
 * Fix video output of 10bit encoded contents on Intel-based Macs equipped
   with an Intel GMA 950 chipset running OS X 10.6 or later.
 * Add support for the HiDPI mode used on recent Apple products with so-called
   Retina Displays.

Access:
 * Rework Digital TV module for Windows. DVB-T and DVB-C should work again
 * Fixes for RAR compressed files
 * Fix DirectShow crashes on exit
 * Improve PulseAudio input latency
 * Fixes for HTTP access through a proxy
 * v4l2 webcam outputting H264 can now be used directly (use --v4l2-chroma=h264)
 * Fix subtitles auto-detection in subfolders and detection behaviour
 * IE http proxy is not used anymore by VLC on Win32
 * Accept more extensions for DVD images
 * Fix crash in VC1 packetizer
 * Improvements in Blu-Ray playback
 * Improvements and fixes in HLS support

Codec:
 * Fix crashes in AAC decoder on channels changes, notably in ISDB streams
 * Fix compilation with multiple FFmpeg and libav versions
 * Fix G726 support
 * Fix MP3 free format support

Demuxers: