@@ -22,7 +22,6 @@ $Id$
  * access_output_file: File access_output module
  * access_output_http: HTTP Network access module
  * access_output_livehttp: Live HTTP stream output
- * access_output_rtmp: RTMP stream output
  * access_output_shout: Shoutcast access output
  * access_output_udp: UDP Network access_output module
  * access_rar: RAR access
