@@ -5,22 +5,10 @@ SOURCES_access_output_udp = udp.c
 SOURCES_access_output_http = http.c bonjour.c bonjour.h
 SOURCES_access_output_shout = shout.c
 
-libaccess_output_rtmp_plugin_la_SOURCES = \
-	rtmp.c \
-	../access/rtmp/rtmp_amf_flv.c \
-	../access/rtmp/rtmp_amf_flv.h
-libaccess_output_rtmp_plugin_la_CFLAGS = $(AM_CFLAGS) \
-	-fno-strict-aliasing
-libaccess_output_rtmp_plugin_la_LIBADD = $(AM_LIBADD)
-libaccess_output_rtmp_plugin_la_DEPENDENCIES =
-
 libvlc_LTLIBRARIES += \
 	libaccess_output_dummy_plugin.la \
 	libaccess_output_file_plugin.la \
 	libaccess_output_livehttp_plugin.la \
 	libaccess_output_udp_plugin.la \
 	libaccess_output_http_plugin.la \
-	$(NULL)
-EXTRA_LTLIBRARIES += \
-	libaccess_output_rtmp_plugin.la \
 	$(NULL)
